--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   ],
   "dependencies": {
     "http-proxy": "1.11.1",
-    "proxy-from-env": "0.0.1"
+    "nodemon": "^2.0.20",
+    "proxy-from-env": "0.0.1",
+    "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
     "coveralls": "^2.11.6",
